# audatec-website

./: .gitignore  README.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  contacts.py  health.py  mock_crm.py  post_call.py  router.py  sessions.py  voice.py
backend/app/core/: config.py
backend/app/integrations/: supabase_client.py
backend/app/middleware/: audit.py  security.py
backend/app/models/: contact.py
backend/app/repositories/: contact_repository.py
backend/app/schemas/: contact.py  post_call.py  session.py  voice.py
backend/app/services/: audit_report.py  compliance_alerts.py  emotion_aggregation.py  entity_extractor.py  mock_crm.py  post_call_processor.py  voice.py
frontend/: .env.example  README.md  components.json  eslint.config.mjs  netlify.toml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/docs/: migration-map.md  release-checklist.md
frontend/public/recordings/: README.md
frontend/scripts/: extract-expertise-map.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/_demo/: page.tsx
frontend/src/app/api/: _proxy.ts
frontend/src/app/contact/: page.tsx
frontend/src/app/customers/: page.tsx
frontend/src/app/expertise/: page.tsx
frontend/src/app/how-it-works/: page.tsx
frontend/src/content/: expertise-map.json
frontend/src/lib/: feature-flags.ts
frontend/src/pages/: legacy-playground.tsx
frontend/src/styles/: globals.css
(+43 files in other folders)
